--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
   </header><!-- End Header -->
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image:url(./assets/img/background.jpg);">
+  <div id="hero" class="hero route bg-image" style="background-image:url(assets/img/background.jpg);">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -418,7 +418,7 @@
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
                           <div class="col-md-12 text-center">
-                            <a href="./assets/html/response.html"><button type="button" class="button button-a button-big button-rouded">Send Message</button></a>
+                            <a href="assets/html/response.html"><button type="button" class="button button-a button-big button-rouded">Send Message</button></a>
                           </div>
                         </div>
                       </form>
