--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
           <div class="copyright-box">
             <p class="copyright">&copy; Copyright <strong>PORTFOLIO</strong>. All Rights Reserved</p>
             <div class="credits">
-              Designed by <a href="https://bootstrapmade.com/">SHIRON</a>
+              Designed by <a href="https://bootstrapmade.com/">GURUDHASS</a>
             </div>
           </div>
         </div>
