--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                   <p>Govt.hr.sec.school</p>
                   <p>aundipatti</p>
                   <p>percentage:<span>70</span></p>
-                  <a href=""><i class="fa-solid fa-folder-open"></i></a>
+                  <a href="assets/img/12.jpg"><i class="fa-solid fa-folder-open"></i></a>
                 </div>
                 <div class="scl">
                   <h3>2018 - Past</h3>
